# mylib

./: .env.example  .gitignore  pyproject.toml  readme.md
.cursor/rules/: prd.mdc
base/: __init__.py
base/agent/: base.py  broker.py  collaborative.py  protocol.py
base/core/: config.py  exceptions.py  logging.py  scheduler.py
base/data/: dataset.py
base/dialogue/: memory.py
base/model/: embedding.py  interface.py  rerank.py  rl.py  tuning.py
base/rag/: __init__.py  chunking.py  document.py  embedding.py  evaluator.py  generator.py  hybrid.py  reranker.py  retriever.py  search.py  sql.py  vectordb.py
base/search/: engine.py
base/service/: cache.py  core.py  loadbalancer.py  resilience.py  speech.py  streaming.py  tracing.py
base/workflow/: engine.py
examples/: async_logger_demo.py  logging_example.py
examples/agent/: README.md  customer_service.py  stock.py  stock_consultation.py  stock_strategies.py
examples/model/: stock_trading_rl.py  stock_tuning.py
examples/rag/: README.md  simple_rag.py
examples/service/: avatar.py  course.py  example.py  web_example.py
examples/workflow/: medical.py  medical_consultation.py  stock.py
module/chunkers/: __init__.py  length.py  sentence.py  structure.py  text.py
module/documents/: __init__.py  image.py  text.py
module/generators/: __init__.py  rag.py
module/logging/: README.md  __init__.py  async_logger.py  concurrent_logger.py  console_logger.py  file_logger.py  rotating_logger.py
module/memory/: __init__.py  config.py  conversation.py  hybrid.py  long_term.py  redis.py  short_term.py  (+1 more)
(+52 files in other folders)
