[tool.poetry]
name = "base"
version = "0.1.0"
description = "基础工具库，提供统一的基础类、接口和工具，用于大模型相关应用开发"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
PyYAML = "^6.0"
aiohttp = "^3.9.0"
loguru = "^0.7.0"
asyncio = "^3.4.3"
numpy = "^1.24.0"
prometheus-client = "^0.19.0"
# Web框架
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"
websockets = "^12.0"
# 数据库
redis = "^5.0.1"
faiss-cpu = "^1.7.4"  # 向量数据库，如果需要GPU支持可以替换为faiss-gpu
# 音视频处理
ffmpeg-python = "^0.2.0"
soundfile = "^0.12.1"
librosa = "^0.10.1"
# 语音处理
azure-cognitiveservices-speech = "^1.34.0"  # Azure语音服务
# 3D渲染和动画
pyglet = "^2.0.10"  # 简单3D渲染
open3d = "^0.17.0"  # 3D模型处理
# 机器学习
torch = "^2.1.0"
transformers = "^4.36.0"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.23.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3 